--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: page
 ---
 
 <ul class="listing">
-{% for post in paginator.posts %}
+{% for post in site.posts %}
   {% capture y %}{{post.date | date:"%Y"}}{% endcapture %}
   {% if year != y %}
     {% assign year = y %}
